Fix link button align.

--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,9 @@ html, body {
     color: rgb(255, 255, 255);
     border-radius: 15px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .link-btn-area > #profile {
